# RustPad

./: README.md
rustpad/: .env  Cargo.toml
rustpad/src/: client.rs  document.rs  lib.rs  main.rs  sessions.rs  utils.rs  websocket.rs
rustpad/src/auth/: auth.rs  session.rs
rustpad/src/editor/: annotations.rs  collaboration.rs  diff_engine.rs  editor.rs  events.rs  extensions.rs  formatter.rs  linter.rs  mod.rs  snippets.rs  state.rs  syntax_highlighting.rs  theme.rs  version_control.rs
rustpad/src/networking/: chat_sync.rs  connection_manager.rs  discovery.rs  mod.rs  peer_sync.rs  protocol.rs  sync.rs  websocket.rs
rustpad/src/storage/: checkpoint.rs  file_storage.rs  history.rs  mod.rs  theme.rs
rustpad/src/ui/: chat.rs  cursors.rs  desktop_ui.rs  file_manager.rs  input_handler.rs  mod.rs  preview.rs  renderer.rs  theme.rs  user_profile.rs  web_ui.rs
rustpad/src/utils/: diff_util.rs  helpers.rs  json_serializer.rs  logger.rs  types.rs
rustpad/static/: index.html  styles.css  wasm.js
rustpad/static/codemirror/: codemirror.css  codemirror.js
rustpad/static/codemirror/addon/edit/: closebrackets.js  matchbrackets.js
rustpad/static/codemirror/addon/scroll/: simplescrollbars.js
rustpad/static/codemirror/mode/: javascript.js  rust.js
rustpad/static/codemirror/theme/: default.css  dracula.css  monokai.css
